--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Rejestracja - Czat szyfrowany</title>
     <!-- ZMIANA: Zunifikowany CSS zamiast inline styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index_styles.css') }}">
 </head>
 <body>
     <div class="login-container">
