--- a/templates/chat.html
+++ b/templates/chat.html
@@ -89,8 +89,8 @@
     <script src="/socket-config.js"></script>
     
     <!-- POPRAWIONE ŚCIEŻKI DO JS -->
-    <script src="{{ url_for('static', filename='crypto.js') }}"></script>
-    <script src="{{ url_for('static', filename='chat.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/crypto.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
     
     <!-- Inicjalizacja aplikacji -->
     <script>
