--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danaid - Bezpieczny Czat</title>
     <!-- ZMIANA: Zunifikowany CSS zamiast chat_style.css -->
-    <link rel="stylesheet" href="static/css/app.css">
+    <link rel="stylesheet" href="static/css/index_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body class="chat-app">
